--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ on:
         type: string
       release_type:
         type: string
+permissions:
+  contents: write
 jobs:
   build:
     name: Build WSA
