--- a/.github/workflows/custom_build.yml
+++ b/.github/workflows/custom_build.yml
@@ -49,6 +49,10 @@ on:
         required: true
         default: true
         type: boolean
+        
+permissions:
+  contents: write
+  actions: write
 
 jobs:
   build:
