--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,6 +40,10 @@ on:
         description: 'Only log actions, do not perform any delete operations.'
         required: false
 
+permissions:
+  contents: write
+  actions: write
+
 jobs:
   del_runs:
     runs-on: ubuntu-latest
