--- a/.github/workflows/custom_build.yml
+++ b/.github/workflows/custom_build.yml
@@ -185,4 +185,4 @@ jobs:
           fail_on_unmatched_files: true
           append_body: true
           tag_name: ${{ needs.build.outputs.date }}
-          body: ${{ steps.run.outputs.hash }}  ${{ needs.build.outputs.zipname }}.7z
+          body: ${{ steps.run.outputs.hash }}  ${{ needs.build.outputs.artifact }}.7z
