--- a/.github/workflows/custom_build.yml
+++ b/.github/workflows/custom_build.yml
@@ -171,12 +171,6 @@ jobs:
           7z a -t7z -mx=6 -m0=LZMA2 -ms=on -mmt=8 -sdel -- "${{ needs.build.outputs.artifact }}.7z" "${{ needs.build.outputs.artifact }}\*"
           ($(Get-FileHash -Path "${{ needs.build.outputs.artifact }}.7z" -Algorithm SHA256).Hash.ToLower().ToString() + "  " + "${{ needs.build.outputs.artifact }}.7z") | Out-File -FilePath sha256-checksum.txt -Encoding UTF8
 
-      - name: Upload Artifact 📦
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ needs.build.outputs.artifact }}-compressed
-          path: output
-        continue-on-error: true
 
       - name: Update build to release 🤌
         uses: softprops/action-gh-release@v2
@@ -186,3 +180,10 @@ jobs:
           append_body: true
           tag_name: ${{ needs.build.outputs.date }}
           body: ${{ steps.run.outputs.hash }}  ${{ needs.build.outputs.artifact }}.7z
+
+#      - name: Upload Artifact 📦
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: ${{ needs.build.outputs.artifact }}-compressed
+#          path: output
+#        continue-on-error: true
