--- a/.github/workflows/custom_build.yml
+++ b/.github/workflows/custom_build.yml
@@ -175,7 +175,7 @@ jobs:
       - name: Update build to release 🤌
         uses: softprops/action-gh-release@v2
         with:
-          files: ${{ needs.build.outputs.artifact }}.7z
+          files: output/${{ needs.build.outputs.artifact }}.7z
           fail_on_unmatched_files: true
           append_body: true
           tag_name: ${{ needs.build.outputs.date }}
