--- a/.github/workflows/custom_build.yml
+++ b/.github/workflows/custom_build.yml
@@ -125,7 +125,7 @@ jobs:
            fi
 
     outputs:
-      artifact: ${{ steps.wsa.outputs.artifact }}
+      zipname: ${{ steps.wsa.outputs.artifact }}
       date: ${{ steps.date.outputs.date }}
       built: ${{ steps.wsa.outputs.built }}
 
@@ -141,23 +141,23 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: output
-          key: ${{ needs.build.outputs.artifact }}-${{ needs.build.outputs.built }}
+          key: ${{ needs.build.outputs.zipname }}-${{ needs.build.outputs.built }}
           enableCrossOsArchive: true
           fail-on-cache-miss: true
 
       - name: Merge language and density resources 🧙🏻‍♂️
         run: |
           if ("${{ inputs.arch }}" -eq "x64") {
-            (Start-Process pwsh.exe -NoNewWindow -PassThru -Args "-ExecutionPolicy Bypass -File MakePri.ps1" -WorkingDirectory "${{ github.workspace }}\output\${{ needs.build.outputs.artifact }}").WaitForExit()
+            (Start-Process pwsh.exe -NoNewWindow -PassThru -Args "-ExecutionPolicy Bypass -File MakePri.ps1" -WorkingDirectory "${{ github.workspace }}\output\${{ needs.build.outputs.zipname }}").WaitForExit()
           } else {
-            Copy-Item -Force "C:\Program Files (x86)\Windows Kits\10\bin\10.0.22621.0\arm64\makepri.exe" "${{ github.workspace }}\output\${{ needs.build.outputs.artifact }}"
+            Copy-Item -Force "C:\Program Files (x86)\Windows Kits\10\bin\10.0.22621.0\arm64\makepri.exe" "${{ github.workspace }}\output\${{ needs.build.outputs.zipname }}"
           }
 
       - name: Compact Images 💿
         run: |
          foreach ($Partition in 'system','product','system_ext','vendor') {
              Write-Output "Optimizing of $Partition..."
-             Write-Output "SELECT VDISK FILE=`"${{ github.workspace }}\output\${{ needs.build.outputs.artifact }}\$Partition.vhdx`"`
+             Write-Output "SELECT VDISK FILE=`"${{ github.workspace }}\output\${{ needs.build.outputs.zipname }}\$Partition.vhdx`"`
              ATTACH VDISK READONLY`
              COMPACT VDISK`
              DETACH VDISK" | Set-Content -Path "$Partition.txt" -Encoding Ascii
@@ -168,26 +168,28 @@ jobs:
         if: inputs.compression == '.7z'
         working-directory: output
         run: |
-          7z a -t7z -mx=6 -m0=LZMA2 -ms=on -mmt=8 -sdel -- "${{ needs.build.outputs.artifact }}.7z" "${{ needs.build.outputs.artifact }}\*"
-          ($(Get-FileHash -Path "${{ needs.build.outputs.artifact }}.7z" -Algorithm SHA256).Hash.ToLower().ToString() + "  " + "${{ needs.build.outputs.artifact }}.7z") | Out-File -FilePath sha256-checksum.txt -Encoding UTF8
+          7z a -t7z -mx=6 -m0=LZMA2 -ms=on -mmt=8 -sdel -- "${{ needs.build.outputs.zipname }}.7z" "${{ needs.build.outputs.zipname }}\*"
+          ($(Get-FileHash -Path "${{ needs.build.outputs.zipname }}.7z" -Algorithm SHA256).Hash.ToLower().ToString() + "  " + "${{ needs.build.outputs.zipname }}.7z") | Out-File -FilePath sha256-checksum.txt -Encoding UTF8
+        continue-on-error: true
 
       - name: File Checksum ✔️
         working-directory: output
         id: run
-        run: ("hash=" + $(Get-FileHash -Path "${{ needs.build.outputs.artifact }}.7z" -Algorithm SHA256).Hash.ToLower().ToString()) | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding UTF8 -Append
+        run: ("hash=" + $(Get-FileHash -Path "${{ needs.build.outputs.zipname }}.7z" -Algorithm SHA256).Hash.ToLower().ToString()) | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding UTF8 -Append
+        continue-on-error: true
 
       - name: Update build to release 🤌
         uses: softprops/action-gh-release@v2
         with:
-          files: output/${{ needs.build.outputs.artifact }}.7z
+          files: output/${{ needs.build.outputs.zipname }}.7z
           fail_on_unmatched_files: true
           append_body: true
           tag_name: ${{ needs.build.outputs.date }}
-          body: ${{ steps.run.outputs.hash }}  ${{ needs.build.outputs.artifact }}.7z
+          body: ${{ steps.run.outputs.hash }}  ${{ needs.build.outputs.zipname }}.7z
 
 #      - name: Upload Artifact 📦
 #        uses: actions/upload-artifact@v4
 #        with:
-#          name: ${{ needs.build.outputs.artifact }}-compressed
+#          name: ${{ needs.build.outputs.zipname }}-compressed
 #          path: output
 #        continue-on-error: true
